# palindrome_python

./: LICENSE  README.md  pyproject.toml
src/palindrome_konstrukteur/: phrase.py
tests/: test_phrase.py
