[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palindrome_konstrukteur"
version = "0.0.1"
authors = [
  { name="Stephan Jung", email="raumerkunder@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Konstrukteur/palindrome_python"
"Bug Tracker" = "https://github.com/Konstrukteur/palindrome_python/issues"